# swarm-leader-follower

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_PLAN.md  CONTRIBUTING.md  ENHANCED_PERFORMANCE_MONITORING.md  FEATURE_SUMMARY.md  FINAL_SUMMARY.md  GETTING_STARTED.md  GETTING_STARTED_MACOS.md  INSTALL_AND_RUN.md  PERFORMANCE.md  PROJECT_FINAL_SUMMARY.md  QUICK_START.md  README.md  README_CLEAN.md  REMAINING_FEATURES.md  USAGE.md  activate_swarm_ros2.sh  cleanup_project.py  cleanup_repository.py  frames_2025-06-28_19.20.48.gv  requirements-conda.txt  requirements.txt  run_ros2_swarm.sh  run_swarm_ros2_demo.sh  run_swarm_static_transforms.sh  setup_ros2_workspace.sh  test_all_demos.py  test_enhanced_performance.py
archive/: test_individual_demos.py  (+1 more)
ros2_workspace/src/modern_swarm/: CMakeLists.txt  README_ROS2.md  setup.py
ros2_workspace/src/modern_swarm/config/: robot_params.yaml  simple_swarm.rviz  swarm_visualization.rviz  working_swarm.rviz
ros2_workspace/src/modern_swarm/launch/: enhanced_swarm_with_vision.launch.py  robot_swarm_with_models.launch.py  simple_gazebo_swarm.launch.py  swarm_leader_follower.launch.py  unified_swarm_gazebo.launch.py  unified_swarm_rviz.launch.py
ros2_workspace/src/modern_swarm/modern_swarm/: __init__.py  robot_simulator.py  swarm_controller.py
ros2_workspace/src/modern_swarm/scripts/: controllers.py  data_logging.py  enhanced_vision_system.py  follower_controller_node.py  interactive_control_system.py  obstacles.py  performance_plotter.py  test_enhanced_vision.py  test_ros2_integration.py  unified_swarm_ros2.py  vision.py  vision_node.py
ros2_workspace/src/modern_swarm/srv/: SetController.srv  SetFormation.srv
ros2_workspace/src/modern_swarm/urdf/: swarm_robot.urdf  swarm_robot.urdf.xacro
(+158 files in other folders)
